testsuite/tests/patsyn/should_compile/poly-export3.hs
{-# LANGUAGE PatternSynonyms #-}

-- Testing polykindedness

module Foo ( A(P) ) where

data A a = A

pattern P = A
